@@ -44,7 +44,7 @@ Bugs fixed:
 - 2390100 mlogf called with unsafe arguments
 - 2390523 buffer overrun in cimslpSLP.c
 - 2433594 sfcb causing 'unaligned access' errors on IA64
-
+- 2316307 SFCB segfaults on missing instance file
 
 Changes in 1.3.2
 ================
